code/force-app/main/default/objects/Environment_Risk_Event__c/Environment_Risk_Event__c.object-meta.xml
<CustomObject>
    <label>環境風險事件</label>
    <nameField>
        <label>裁處書字號</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>