code/force-app/main/default/objects/Environment_Risk_Event__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>公司名稱</label>
    <length>200</length>
    <type>Text</type>
</CustomField>