code/force-app/main/default/objects/Environment_Risk_Event__c/fields/Environment_Risk_Event_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Environment_Risk_Event_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>環境風險事件外鍵</label>
    <length>200</length>
    <type>Text</type>
</CustomField>