code/force-app/main/default/objects/Environment_Risk_Event__c/fields/Legal_Provision__c.field-meta.xml
<CustomField>
    <fullName>Legal_Provision__c</fullName>
    <label>法規條款</label>
    <length>1600</length>
    <type>LongTextArea</type>
</CustomField>