code/force-app/main/default/objects/Environment_Risk_Event__c/fields/Penalty_Amount__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Amount__c</fullName>
    <label>裁處金額</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>