code/force-app/main/default/objects/Environment_Risk_Event__c/fields/Penalty_Reason__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Reason__c</fullName>
    <label>裁處理由</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>