code/force-app/main/default/objects/Environment_Risk_Event__c/fields/Penalty_Time__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Time__c</fullName>
    <label>裁處時間</label>
    <type>Date</type>
</CustomField>