code/force-app/main/default/objects/Environment_Risk_Event__c/fields/Violation_Time__c.field-meta.xml
<CustomField>
    <fullName>Violation_Time__c</fullName>
    <label>違反時間</label>
    <type>Date</type>
</CustomField>