code/force-app/main/default/objects/Environment_Risk_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Penalty_Time__c</columns>
    <columns>Violation_Time__c</columns>
    <columns>Penalty_Amount__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Legal_Provision__c</columns>
    <columns>Penalty_Reason__c</columns>
    <columns>Account_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>